<resources>
    <string name="activity_contacts_list">Contacts List</string>
    <string name="activity_contact_detail">Contact Detail</string>
    <string name="contacts_list_search_results_title">Contacts List Search for \"%s\"</string>
    <string name="imageview_description">Contact Thumbnail</string>
    <string name="address_button_description">View Address</string>
    <string name="menu_search">Search</string>
    <string name="menu_add_contact">Add Contact</string>
    <string name="menu_edit_contact">Edit Contact</string>
    <string name="no_contacts">No Contacts Found</string>
    <string name="no_contact_selected">No Contact Selected</string>
    <string name="search_hint">Find contacts</string>
    <string name="alphabet">ABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="search_match_other">Matches Other Field</string>
    <string name="no_address">No addresses found</string>
    <string name="no_intent_found">No application found to handle this action</string>
    <string name="app_name">SMS Mobile Data Free</string>
    <string name="app_name1">SMS Mobile Data Free</string>
    <string name="app_name2">SMS Mobile Data</string>
    <string name="app_name3">SMS WIFI Free</string>
    <string name="app_name4">SMS WIFI</string>
    <string name="exactgps">Exact GPS</string>
    <string name="action_selectContact">Select contact</string>
    <string name="action_forwardPosition">Send as text message</string>
    <string name="action_checkin">Checkin</string>
    <string name="action_savePOI">Save</string>
    <string name="action_snapShot">Send as picture</string>
    <string name="action_addContact">Add contact</string>
    <string name="action_addtoTrustList">Location sharing</string>
    <string name="action_broadcast_zone">Location sharing</string>
    <string name="action_watch_zone">Mute notification</string>
    <string name="action_silent_zone">Location sharing</string>
    <string name="action_deletePOI">Delete</string>
    <string name="action_editPOI">Edit</string>
    <string name="action_renamePOI">Rename</string>
    <string name="action_Locate">Locate</string>
    <string name="action_showLastLocationShared">Last location shared</string>
    <string name="action_showUserGroup">Group</string>
    <string name="action_setPOIIcon">Change icon</string>
    <string name="action_defaultPOIIcon">Set default icon</string>
    <string name="action_myLocation">Set current location</string>
    <string name="action_settings">Settings</string>
    <string name="action_showhint">Show hints</string>
    <string name="action_search_queryHint">Address</string>
    <string name="action_trustedContacts">Trusted contacts</string>
    <string name="action_Help">Help</string>
    <string name="action_About">About</string>
    <string name="action_CloseMap">Close map</string>
    <string name="action_search">Search</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_Send">Location request via SMS</string>
    <string name="action_Call">Call</string>
    <string name="action_Mute">Mute notification</string>
    <string name="action_sendMessage">Send message</string>
    <string name="action_AddContact">Add contact</string>
    <string name="action_AddGroup">Add group</string>
    <string name="action_ContactSync">Synchronize</string>
    <string name="action_Invite">Share</string>
    <string name="title_activity_show_map">Show Map</string>
    <string name="DebugView">Debug view</string>
    <string name="PositionsView">Positions</string>
    <string name="EventLogView">Event Log</string>
    <string name="lRequestsView">Location request</string>
    <string name="ContactGroups">Groups</string>
    <string name="GroupSettings">Group settings</string>
    <string name="DatabaseView">Database view</string>
    <string name="title_location_request">Location request via SMS</string>
    <string name="TrustedContactView">Trusted contacts</string>
    <string name="ContactSettingsView">Contact settings</string>
    <string name="Messaging">Messaging</string>
    <string name="Upgrade">Upgrade</string>
    <string name="Subscribe">Subscribe</string>
    <string name="Subscription">Subscription</string>
    <string name="Unsubscribe">Unsubscribe</string>
    <string name="Later">Later</string>
    <string name="Verify">Verify</string>
    <string name="EnterPhoneNumber">Enter phone number</string>
    <string name="Subscription1">1 month</string>
    <string name="Subscription2">6 months</string>
    <string name="Subscription3">12 months</string>
    <string name="title_activity_contact_location">Contact Location</string>
    <string name="title_activity_phone_verification">Phone verification</string>
    <string name="text_verification">Enter your phone number for verification</string>
    <string name="title_AuthActivity">Google auth activity</string>
    <string name="title_debug_view">Debug view</string>
	<string name="title_activity_about">About</string>
	<string name="title_activity_backup">Backup</string>
	<string name="title_activity_restore">Restore</string>
	<string name="title_activity_credits">Credits</string>
	<string name="title_activity_purchase">Service subscription</string>
	<string name="title_activity_preference">Preference</string>
	<string name="title_activity_agreement">Agreement</string>
	 <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_websearch">Web search</string>
    <string name="app_not_available">Sorry, there\'s no web browser available</string>
	<string name="Temp">Temp</string>
	<string name="Hum">Hum</string>
	<string name="Wind">Wind</string>
	<string-array name="menu">
		<item>Create</item>
		<item>Edit</item>
		<item>Delete</item>
	</string-array>
<string name="STR10000">Connection error, please check internet connection</string>
<string name="STR10001">&#160;has a new location</string>
<string name="STR10002">New name</string>
<string name="STR10003">Save</string>
<string name="STR10004">Cancel</string>
<string name="STR10005">Message sent</string>
<string name="STR10006">No last known location</string>
<string name="STR10007">&#160;is close to&#160;</string>
<string name="STR10008">&#160;is at an unknown location</string>
<string name="STR10009">Retrieving weather info&#8230;</string>
<string name="STR10010">Sending location request</string>
<string name="STR10011">This may incur charges to your phone bill. Press confirm to proceed</string>
<string name="STR10012">Confirm</string>
<string name="STR10013">Cancel</string>
<string name="STR10014">Select contact</string>
<string name="STR10015">Updating&#8230;</string>
<string name="STR10016">&#160;updated</string>
<string name="STR10017">Save</string>
<string name="STR10018">Cancel</string>
<string name="STR10019">Program settings protection</string>
<string name="STR10020">The section is currently password protected.\n\nPlease enter password</string>
<string name="STR10021">OK</string>
<string name="STR10022">Incorrect password</string>
<string name="STR10023">Cancel</string>
<string name="STR10024">Your last location shared</string>
<string name="STR10025">Here is&#160;</string>
<string name="STR10026"></string>
<string name="STR10027">Location shared by Exact GPS</string>
<string name="STR10028">my last location shared&#160;</string>
<string name="STR10029">Last location shared with&#160;</string>
<string name="STR10030"></string>
<string name="STR10031">No location shared with&#160;</string>
<string name="STR10032">Name a place</string>
<string name="STR10033">Name</string>
<string name="STR20000">Change background color</string>
<string name="STR20001">Enter color code</string>
<string name="STR20002">OK</string>
<string name="STR20003">Cancel</string>
<string name="STR20004">Please wait&#8230;</string>
<string name="STR20005">Country code not found</string>
<string name="STR20006">Please check your internet connection and try again</string>
<string name="STR20007">Verification</string>
<string name="STR20008">Press confirm to verify this phone number</string>
<string name="STR20009">\n\nYour carrier may charge you for sending and receiving SMS.</string>
<string name="STR20010">Confirm</string>
<string name="STR20011">Cancel</string>
<string name="STR20012">Internet connection error.\nYour phone is not connected to the internet.\nDo you want to retry?</string>
<string name="STR20013">Connection error</string>
<string name="STR20014">OK</string>
<string name="STR20015">Creating database&#8230;</string>
<string name="STR20016">Please wait&#8230;</string>
<string name="STR20017">Downloading saved preferences and data</string>
<string name="STR20018">Please wait&#8230;</string>
<string name="STR20019">Transferring preferences and data</string>
<string name="STR20020">Please wait&#8230;</string>
<string name="STR20021">Verification completed</string>
<string name="STR20022">Congratulations, all things done!</string>
<string name="STR20023">Phone number changed</string>
<string name="STR20024">Your phone number has been changed to&#160;</string>
<string name="STR20025">Go</string>
<string name="STR20026">Verification failed</string>
<string name="STR20027">This problem may be due to internet connection error.\nDo you want to retry?</string>
<string name="STR20028">Retry</string>
<string name="STR20029">Later</string>
<string name="STR20030">Please wait&#8230;</string>
<string name="STR20031">Please wait&#8230;</string>
<string name="STR20032">Please wait&#8230;</string>
<string name="STR20033">Verifying your phone number\n It won\'t take too long</string>
<string name="STR20034">Authenticating</string>
<string name="STR20035">Searching for your registration in our database</string>
<string name="STR20036">Detecting your country code</string>
<string name="STR30000">&#160;has left&#160;</string>
<string name="STR30001">&#160;is close to&#160;</string>
<string name="STR30002">&#160;is close to&#160;</string>
<string name="STR30003">&#160;is very close to&#160;</string>
<string name="STR30004">Location request received</string>
<string name="STR30005">Please enable GPS or network for positioning</string>
<string name="STR30006">You can now share your location via internet\n</string>
<string name="STR30007">Valid until </string>
<string name="STR30008">Cloud service activated</string>
<string name="STR30009">Cloud service suspensed</string>
<string name="STR30010">Your cloud service is expired.</string>
<string name="STR30011">Location services disabled</string>
<string name="STR30012">Please enable location services</string>
<string name="STR30013">M away</string>
<string name="STR30014">M away from </string>
<string name="STR30015">Last known nearby&#160;</string>
<string name="STR30016">&#160;minutes ago</string>
<string name="STR40001">Do not show this message again</string>
<string name="STR40002">Got it</string>
<string name="STR40003">No more hints</string>
<string name="STR50001">Select</string>
<string-array name="STR60001">
        <item>Sun</item>
        <item>Mon</item>
        <item>Tue</item>
        <item>Wed</item>
        <item>Thu</item>
        <item>Fri</item>
        <item>Sat</item>
    </string-array>
<string name="STR60002">Saved</string>
    <string name="STR22001">ON</string>
    <string name="STR22002">OFF</string>
    <string name="start">Start</string>
    <string name="entercode">Enter code</string>
    <string name="STR22006">Change passcode</string>
    <string name="STR22007">Settings</string>
    <string name="STR22008">Send SMS with passcode to control WIFI</string>
	<string name="STR22012">Press start</string>
    <string name="STR22013">Get full version</string>
    <string name="STR22021">Turn on / off mobile data by SMS</string>
    <string name="STR22022">Turn on / off WIFI by SMS</string>
    <string name="STR22023">Instant location sharing</string>
    <string name="STR22028">Send out</string>
</resources>